--- a/ddaycounter.html
+++ b/ddaycounter.html
@@ -8,11 +8,11 @@
     <style>
 
 body{
-    background-color: white;
+    background-color: #FAF1F5;
 }
   
 #timer {
-  color: #eeeeee;
+  color: #DD2E44;
   text-align: center;
   text-transform: uppercase;
   font-family: 'Lato', sans-serif;
@@ -28,20 +28,19 @@ body{
 }
 
 .days {
-  background: #EF2F3C;
+  background: #FADDEA;
 }
 
 .hours {
-  background: #eeeeee;
-  color: #183059;
+  background: #FADDEA;
 }
 
 .minutes {
-  background: #276FBF;
+  background: #FADDEA;
 }
 
 .seconds {
-  background: #F0A202;
+  background: #FADDEA;
 }
 
 .numbers {
