--- a/ddaycounter.html
+++ b/ddaycounter.html
@@ -12,7 +12,7 @@ body{
 }
   
 #timer {
-  color: #DD2E44;
+  color: #eeeeee;
   text-align: center;
   text-transform: uppercase;
   font-family: 'Lato', sans-serif;
@@ -45,7 +45,7 @@ body{
 
 .numbers {
   font-family: 'Montserrat', sans-serif;
-  color:  #183059;
+  color:  #DD2E44;
   font-size: 4em;
   text-align: center;
 }
