--- a/ddaycounter.html
+++ b/ddaycounter.html
@@ -12,7 +12,7 @@ body{
 }
   
 #timer {
-  color: #eeeeee;
+  color: #38495E;
   text-align: center;
   text-transform: uppercase;
   font-family: 'Lato', sans-serif;
