--- a/ddaycounter.html
+++ b/ddaycounter.html
@@ -28,19 +28,19 @@ body{
 }
 
 .days {
-  background: #FADDEA;
+  background: #E3AFC7;
 }
 
 .hours {
-  background: #FADDEA;
+  background: #EDCBDA;
 }
 
 .minutes {
-  background: #FADDEA;
+  background: #F4E0E9;
 }
 
 .seconds {
-  background: #FADDEA;
+  background: #ffffff;
 }
 
 .numbers {
