--- a/ddaycounter.html
+++ b/ddaycounter.html
@@ -17,14 +17,14 @@ body{
   text-transform: uppercase;
   font-family: 'Lato', sans-serif;
   font-size: .7em;
-  letter-spacing: 5px;
+  letter-spacing: 5%;
 }
 
 .days, .hours, .minutes, .seconds {
   display: inline-block;
-  padding: 20px;
-  width: 100px;
-  border-radius: 5px;
+  padding: 20%;
+  width: 100%;
+  border-radius: 5%;
 }
 
 .days {
@@ -53,8 +53,8 @@ body{
 .white {
   position: absolute;
   background:  #eeeeee;
-  height: 85px;
-  width: 75px;
+  height: 85%;
+  width: 75%;
   left: 30%;
   top: 2%;
 }
@@ -64,16 +64,16 @@ body{
   background:  #EF2F3C;
   left: 18%;
   top: 9%;
-  height: 65px;
-  width: 70px;
+  height: 65%;
+  width: 70%;
  
 }
 
 .blue {
   position: absolute;
   background:  #276FBF;
-  height: 80px;
-  width: 80px;
+  height: 80%;
+  width: 80%;
   left: 60%;
   top: 5%;
 
