--- a/ddaycounter.html
+++ b/ddaycounter.html
@@ -20,7 +20,7 @@ body{
   letter-spacing: 5%;
 }
 
-.days, .hours, .minutes, .seconds {
+.days {
   display: inline-block;
   padding: 20%;
   width: 100%;
@@ -28,18 +28,6 @@ body{
 }
 
 .days {
-  background: #FAF1F5;
-}
-
-.hours {
-  background: #FAF1F5;
-}
-
-.minutes {
-  background: #FAF1F5;
-}
-
-.seconds {
   background: #FAF1F5;
 }
 
@@ -112,7 +100,7 @@ let timer = setInterval(function() {
   const today = new Date().getTime();
 
   // get the difference
-  const diff =  - ( myDate - today ) ;
+  const diff =  - ( myDate - today +1 ) ;
 
   // math
   let days = Math.floor(diff / (1000 * 60 * 60 * 24));
