--- a/ddaycounter.html
+++ b/ddaycounter.html
@@ -100,7 +100,7 @@ let timer = setInterval(function() {
   const today = new Date().getTime();
 
   // get the difference
-  const diff =  - ( myDate - today +1 ) ;
+  const diff =  - ( ( myDate - 1 ) - today ) ;
 
   // math
   let days = Math.floor(diff / (1000 * 60 * 60 * 24));
@@ -110,9 +110,6 @@ let timer = setInterval(function() {
 
   // display
   document.getElementById("days").innerHTML=days
-  document.getElementById("hours").innerHTML=hours
-  document.getElementById("minutes").innerHTML=minutes
-  document.getElementById("seconds").innerHTML=seconds
 
 
 
