--- a/ddaycounter.html
+++ b/ddaycounter.html
@@ -23,8 +23,8 @@ body{
 .days {
   display: inline-block;
   padding: 0%;
-  width: 100%;
-  border-radius: 5%;
+  width: 25px;
+  border-radius: 0%;
 }
 
 .days {
